<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguagePickerActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_w_items"
        android:alpha="0.9" />

    <TextView
        android:id="@+id/txt_language"
        style="@style/shadowEffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="128dp"
        android:fontFamily="@font/candy_beans"
        android:text="@string/Language"
        android:textColor="@color/primary"
        android:textSize="48sp"
        app:flow_horizontalAlign="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/txt_en"
        android:layout_width="280dp"
        android:layout_height="220dp"
        android:fontFamily="@font/candy_beans"
        android:background="@drawable/rounded_corner_en"
        android:text="@string/ENGLISH"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@id/txt_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/circular_flag_en"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:src="@drawable/rounded_corner_en"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="@id/txt_en"
        app:layout_constraintStart_toStartOf="@id/txt_en"
        app:layout_constraintEnd_toEndOf="@id/txt_en"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toTopOf="@id/circular_flag_en"
        app:layout_constraintStart_toStartOf="@id/circular_flag_en"
        app:layout_constraintEnd_toEndOf="@id/circular_flag_en"
        app:layout_constraintBottom_toBottomOf="@id/circular_flag_en"
        >
        <ImageView
            android:src="@drawable/us1"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </androidx.cardview.widget.CardView>



    <TextView
        android:id="@+id/txt_fil"
        android:layout_width="280dp"
        android:layout_height="220dp"
        android:textColor="@color/white"
        android:fontFamily="@font/candy_beans"
        android:text="@string/TAGALOG"
        android:textSize="48sp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_en"
        android:background="@drawable/rounded_corner_fil"
        />

    <ImageView
        android:id="@+id/circular_flag_fil"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:src="@drawable/rounded_corner_fil"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="@id/txt_fil"
        app:layout_constraintStart_toStartOf="@id/txt_fil"
        app:layout_constraintEnd_toEndOf="@id/txt_fil"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toTopOf="@id/circular_flag_fil"
        app:layout_constraintStart_toStartOf="@id/circular_flag_fil"
        app:layout_constraintEnd_toEndOf="@id/circular_flag_fil"
        app:layout_constraintBottom_toBottomOf="@id/circular_flag_fil"
        >
        <ImageView
            android:src="@drawable/ph1"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>