<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyEmailActivity">

    <ImageView
        android:id="@+id/img_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/img_bg" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/kids_w_bg"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_rnd_rect_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_kids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/candy_beans"
            android:text="KIDS"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/img_bg_overlay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_white_bg"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.55"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:orientation="vertical"
        android:paddingStart="42dp"
        android:paddingEnd="42dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_bg"
        app:layout_constraintTop_toTopOf="@+id/img_bg_overlay"
        app:layout_constraintVertical_bias="0.069"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/txt_header1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:fontFamily="@font/telegraf_bold"
            android:text="You've got mail!"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="40dp" />


        <TextView
            android:id="@+id/txt_header2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verification_instructions"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:fontFamily="@font/telegraf_regular"
            android:textColor="@color/secondary"
            android:textSize="24dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_resend_code"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_no_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/telegraf_regular"
                android:gravity="center_vertical|end"
                android:minHeight="48dp"
                android:text="Didn't receive a code?"
                android:textColor="@color/secondary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_resend_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:fontFamily="@font/telegraf_bold"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:text="@string/resend_code"
                android:textColor="@color/secondary"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/telegraf_light"
            android:textAlignment="center"
            android:textColor="#F44336"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/telegraf_bold"
            android:text="Verify"
            android:textSize="20sp"
            app:cornerRadius="15dp" />

        <LinearLayout
            android:id="@+id/layout_log_in"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_already"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/telegraf_regular"
                android:gravity="center_vertical|end"
                android:minHeight="48dp"
                android:text="Wrong email address?"
                android:textColor="@color/secondary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:fontFamily="@font/telegraf_bold"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:text="@string/register"
                android:textColor="@color/secondary"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>