<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg"
    tools:context=".InformationActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/info_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="45dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Information Section -->
            <LinearLayout
                android:id="@+id/info_section"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/divider1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/info_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_information"
                    app:tint="@color/primary" />

                <TextView
                    android:id="@+id/info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/candy_beans"
                    android:text="@string/information"
                    android:textColor="@color/primary"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:id="@+id/divider1"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/strategies_section"
                app:layout_constraintStart_toEndOf="@id/info_section"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/strategies_section"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/divider2"
                app:layout_constraintStart_toEndOf="@id/divider1"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/strategies_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_idea"
                    app:tint="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/strategies_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/candy_beans"
                    android:text="@string/strategies"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/partners_section"
                app:layout_constraintStart_toEndOf="@id/strategies_section"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/partners_section"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/divider2"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/partners_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_support"
                    app:tint="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/partners_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/candy_beans"
                    android:text="@string/partners"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/fragment_navigation_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_selection" />

    <FrameLayout
        android:id="@+id/fragment_navigation_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view" />


</androidx.constraintlayout.widget.ConstraintLayout>